--- a/manifest.ini
+++ b/manifest.ini
@@ -1,9 +1,13 @@
 name = gestureDuplicate
 summary = "gestureDuplicate"
-description = """Identifies and manages conflicting keyboard shortcuts in your NVDA configuration"""
+description = """Identifies and manages conflicting keyboard shortcuts in your NVDA configuration
+Hot Keys:
+Shift+Windows+G
+Single Tap : Check for duplicate input gestures
+Double Tap : My Gestures Management"""
 author = "chai chaimee <chaicm75@gmail.com>"
 url = https://github.com/chaichaimee/gestureDuplicate
-version = 2026.1
+version = 2026.2
 docFileName = readme.html
 minimumNVDAVersion = 2022.4
 lastTestedNVDAVersion = 2025.3
